change #search-bar z-index to 850 to fix buddybar and header overlap

--- a/wp-content/themes/nycga/style.css
+++ b/wp-content/themes/nycga/style.css
@@ -140,7 +140,7 @@ h1#logo {
 		height:25px;
 		top:5px;
 		text-align: right;
-		z-index:1000;
+		z-index:850;
 	}
 	
 		#search-bar .align-right {
